tests/NormalTests/paczka1/small_fuzzy/42709991.err
Error in line 4: UWYCeMOEz A701 79,6
Error in line 9: Gafm6oKnfnL S278 43,2
